--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ steps:
     solution: '$(solution)'
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
-    msbuildArgs: '/p:TargetFrameworkVersion=8.0'
+    msbuildArgs: '/p:TargetFrameworkVersion=6.0.300-preview.5'
 
 - task: VSTest@2
   inputs:
